--- a/iTEMS/Views/Projects/Index.cshtml
+++ b/iTEMS/Views/Projects/Index.cshtml
@@ -293,8 +293,8 @@
                         <input type="text" class="form-control" id="new-event-title">
                     </div>
                     <div class="form-group">
-                        <label for="new-event-duration">Duration (minutes)</label>
-                        <input type="number" class="form-control" id="new-event-duration" value="30">
+                        <label for="new-event-duration" style="display:none">Duration (minutes)</label>
+                        <input type="number" class="form-control" id="new-event-duration" value="30" style="display:none">
                     </div>
                 </form>
             </div>
@@ -466,17 +466,16 @@
                             }
                             
                         </div>
-                        <p class="card-text">
+                        <p class="card-text">                            
+                            <strong>Client Name:</strong> @Html.DisplayFor(modelItem => item.ClientName) <br />
                             <strong>Person in Charge:</strong> @Html.DisplayFor(modelItem => item.PIC) <br />
-                            <strong>Latest Update:</strong> @Html.DisplayFor(modelItem => item.Update) <br />
-                            <strong>Update Date:</strong> @item.ModifiedOn.ToString("dd - MMMM - yyyy") <br />
                         </p>
                     </div>
 
                     <div class="card-footer d-flex justify-content-end">
                         <div class="btn-group" style="align-items:center">
-                            <a class="btn btn-primary btn-sm" asp-action="Details" asp-route-id="@item.Id" title="View Project Details">
-                                <i class="fas fa-folder"></i>&nbsp;&nbsp;&nbsp;View Project Details
+                            <a class="btn btn-primary btn-sm" asp-action="Details" asp-route-id="@item.Id" title="View Project Feed">
+                                <i class="fas fa-folder"></i>&nbsp;&nbsp;&nbsp;View Project Feed
                             </a>
                             <a class="btn btn-info btn-sm" asp-action="Edit" asp-route-id="@item.Id" title="Update Project Details">
                                 <i class="fas fa-pencil-alt"></i>
