--- a/iTEMS/Views/Shared/_Layout.cshtml
+++ b/iTEMS/Views/Shared/_Layout.cshtml
@@ -130,13 +130,13 @@
                 <!-- Add the toggle button here -->
                 <li class="nav-item">
                     <button id="darkModeBtn" class="nav-link btn btn-link" style="color: white;" title="Switch to Dark Mode">
-                        <i class="fas fa-moon"></i> Dark Mode
+                        <i class="fas fa-moon"></i>
                     </button>
                 </li>
                 <!-- Add the light mode button here -->
                 <li class="nav-item">
                     <button id="lightModeBtn" class="nav-link btn btn-link" style="color: white;" title="Switch to Light Mode">
-                        <i class="fas fa-sun"></i> Light Mode
+                        <i class="fas fa-sun"></i>
                     </button>
                 </li>
                 <li class="nav-item dropdown">
@@ -280,6 +280,7 @@
         </main>
     </div>
 
+    <br />
     <br />
     <footer class="footer text-muted">
         <div class="container" style="text-align: center;">
